--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde = "1.0.228"
+serde_json = "1.0.145"
+uuid = { version = "1.18.1", features = ["v4"] }
+
+
