--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = "1.0.228"
+bitmaps = "3.2.1"
+bitvec = "1.0.1"
+once_cell = "1.21.3"
+serde = { version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.145"
+toml = "0.9.8"
 uuid = { version = "1.18.1", features = ["v4"] }
 
 
