--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 bitmaps = "3.2.1"
 bitvec = "1.0.1"
+intrusive-collections = "0.9.7"
 once_cell = "1.21.3"
 serde = { version = "1.0.228", features = ["derive"]}
 serde_json = "1.0.145"
